@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+export(adjustLogRatio)
 export(annotateTargets)
 export(bootstrapResults)
 export(calculateBamCoverageByInterval)
