@@ -1,6 +1,12 @@
 Changes in version 2.10.0
 -------------------------
 
+NEW FEATURES
+    o adjustLogRatio function for adjusting a tumor vs normal coverage
+      ratio for purity and ploidy. Useful for downstream tools that
+      expect ratios instead of absolute copy numbers such as GISTIC.
+      Thanks @tedtoal (#40).
+
 SIGNIFICANT USER-VISIBLE CHANGES
 
     o Provide interval-level likelihood scores in runAbsoluteCN return
